--- a/agent_from_video.ipynb
+++ b/agent_from_video.ipynb
@@ -1,19 +1,26 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Notebook com os códigos mostrados no vídeo-referência atualizado com comentários explicativos."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "id": "3P7cqKky8kF0",
-        "outputId": "001b672a-82b9-49dc-cd6e-dde4290a3213",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3P7cqKky8kF0",
+        "outputId": "001b672a-82b9-49dc-cd6e-dde4290a3213"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting groq\n",
             "  Downloading groq-0.31.0-py3-none-any.whl.metadata (16 kB)\n",
@@ -43,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "8YSXjwFH8kF1"
       },
@@ -60,18 +67,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
-        "id": "DSxhDEzN8kF1",
-        "outputId": "372ea0a5-b59e-4dab-ad13-da00d40b05d7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DSxhDEzN8kF1",
+        "outputId": "372ea0a5-b59e-4dab-ad13-da00d40b05d7"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Fast language models have gained significant attention in recent years due to their ability to process and generate human-like text quickly and efficiently. The importance of fast language models can be understood from several perspectives:\n",
             "\n",
@@ -92,58 +99,59 @@
         }
       ],
       "source": [
-        "client = Groq(api_key=os.environ.get(\"GROQ_API_KEY\"))\n",
+        "client = Groq(api_key=os.environ.get(\"GROQ_API_KEY\"))  # Inicializa cliente Groq com a API key\n",
         "\n",
-        "chat_completion = client.chat.completions.create(\n",
+        "chat_completion = client.chat.completions.create(  # Cria uma requisição de chat completion\n",
         "    messages=[\n",
-        "        {\"role\": \"user\", \"content\": \"Explain the importance of fast language models\"}\n",
+        "        {\"role\": \"user\", \"content\": \"Explain the importance of fast language models\"}  # Mensagem do usuário\n",
         "    ],\n",
-        "    model=\"llama-3.1-8b-instant\",\n",
+        "    model=\"llama-3.1-8b-instant\",  # Modelo de linguagem Llama selecionado\n",
         "    temperature=0\n",
         ")\n",
         "\n",
-        "print(chat_completion.choices[0].message.content)"
+        "print(chat_completion.choices[0].message.content)  # Print da resposta do modelo"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "1Ky19f308kF2"
       },
       "outputs": [],
       "source": [
-        "class Agent:\n",
+        "class Agent:  # Classe que representa um agente conversacional\n",
         "    def __init__(self, client: Groq, system: str = \"\") -> None:\n",
-        "        self.client = client\n",
-        "        self.system = system\n",
-        "        self.messages: list = []\n",
+        "        self.client = client  # Cliente Groq para requisições\n",
+        "        self.system = system  # Prompt do sistema: define o comportamento do agente\n",
+        "        self.messages: list = []  # Lista para armazenar histórico da conversa\n",
         "        if self.system:\n",
-        "            self.messages.append({\"role\": \"system\", \"content\": system})\n",
+        "            self.messages.append({\"role\": \"system\", \"content\": system})  # Adiciona o prompt do sistema se existir\n",
         "\n",
-        "    def __call__(self, message=\"\"):\n",
+        "    def __call__(self, message=\"\"):  # Permite chamar a instância como uma função\n",
         "        if message:\n",
-        "            self.messages.append({\"role\": \"user\", \"content\": message})\n",
-        "        result = self.execute()\n",
-        "        self.messages.append({\"role\": \"assistant\", \"content\": result})\n",
+        "            self.messages.append({\"role\": \"user\", \"content\": message})  # Adiciona mensagem do usuário\n",
+        "        result = self.execute()  # Executa a requisição para o modelo\n",
+        "        self.messages.append({\"role\": \"assistant\", \"content\": result})  # Salva resposta no histórico\n",
         "        return result\n",
         "\n",
-        "    def execute(self):\n",
+        "    def execute(self):  # Método para fazer a requisição ao modelo de linguagem\n",
         "        completion = client.chat.completions.create(\n",
-        "            model=\"llama-3.1-8b-instant\", messages=self.messages\n",
+        "            model=\"llama-3.1-8b-instant\", messages=self.messages  # Envia todo o histórico da conversa\n",
         "        )\n",
-        "        return completion.choices[0].message.content"
+        "        return completion.choices[0].message.content  # Retorna o conteúdo da resposta"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "7Y2F6MvN8kF2"
       },
       "outputs": [],
       "source": [
-        "system_prompt = \"\"\"\n",
+        "# Prompt que define o padrão ReAct (Reasoning and Acting)\n",
+        "system_prompt = \"\"\"  \n",
         "You run in a loop of Thought, Action, PAUSE, Observation.\n",
         "At the end of the loop you output an Answer\n",
         "Use Thought to describe your thoughts about the question you have been asked.\n",
@@ -187,6 +195,8 @@
         "\"\"\".strip()\n",
         "\n",
         "\n",
+        "# Ferramentas disponíveis para o agente\n",
+        "\n",
         "def calculate(operation: str) -> float:\n",
         "    return eval(operation)\n",
         "\n",
@@ -215,29 +225,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "giV0_TAI8kF2"
       },
       "outputs": [],
       "source": [
-        "neil_tyson = Agent(client=client, system=system_prompt)"
+        "neil_tyson = Agent(client=client, system=system_prompt)  # Instância do agente com o prompt ReAct"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
-        "id": "-oiTO9tZ8kF2",
-        "outputId": "aada2437-f8d1-4352-9f57-77e124c94581",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-oiTO9tZ8kF2",
+        "outputId": "aada2437-f8d1-4352-9f57-77e124c94581"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Thought: I need to find the mass of Earth and Saturn, then add them together and multiply by 2\n",
             "Action: get_planet_mass: Earth\n",
@@ -278,45 +288,48 @@
         "import re\n",
         "\n",
         "\n",
-        "def loop(max_iterations=10, query: str = \"\"):\n",
+        "def loop(max_iterations=10, query: str = \"\"):  # Loop principal que executa o padrão ReAct\n",
         "\n",
-        "    agent = Agent(client=client, system=system_prompt)\n",
+        "    agent = Agent(client=client, system=system_prompt)  # Nova instância do agente\n",
         "\n",
-        "    tools = [\"calculate\", \"get_planet_mass\"]\n",
+        "    tools = [\"calculate\", \"get_planet_mass\"]  # Lista de ferramentas disponíveis\n",
         "\n",
-        "    next_prompt = query\n",
+        "    next_prompt = query  # Pergunta do usuário\n",
         "\n",
         "    i = 0\n",
         "\n",
-        "    while i < max_iterations:\n",
+        "    while i < max_iterations:  # Limita o número de iterações: evitar loops infinitos\n",
         "        i += 1\n",
-        "        result = agent(next_prompt)\n",
+        "        result = agent(next_prompt)  # Resposta do agente\n",
         "        print(result)\n",
         "\n",
-        "        if \"PAUSE\" in result and \"Action\" in result:\n",
-        "            action = re.findall(r\"Action: ([a-z_]+): (.+)\", result, re.IGNORECASE)\n",
-        "            chosen_tool = action[0][0]\n",
-        "            arg = action[0][1]\n",
+        "        if \"PAUSE\" in result and \"Action\" in result:  # Verifica se o agente quer usar uma ferramenta\n",
+        "            action = re.findall(r\"Action: ([a-z_]+): (.+)\", result, re.IGNORECASE)  # Extrai nome da ferramenta e argumentos\n",
+        "            chosen_tool = action[0][0]  \n",
+        "            arg = action[0][1]  \n",
         "\n",
-        "            if chosen_tool in tools:\n",
-        "                result_tool = eval(f\"{chosen_tool}('{arg}')\")\n",
-        "                next_prompt = f\"Observation: {result_tool}\"\n",
+        "            if chosen_tool in tools:  # Verifica se a ferramenta existe\n",
+        "                result_tool = eval(f\"{chosen_tool}('{arg}')\")  # Executa a ferramenta\n",
+        "                next_prompt = f\"Observation: {result_tool}\"  # Prepara resultado para próxima iteração\n",
         "\n",
         "            else:\n",
-        "                next_prompt = \"Observation: Tool not found\"\n",
+        "                next_prompt = \"Observation: Tool not found\"  # Informa erro se ferramenta não existir\n",
         "\n",
         "            print(next_prompt)\n",
         "            continue\n",
         "\n",
-        "        if \"Answer\" in result:\n",
+        "        if \"Answer\" in result:  # Interrompe o loop se o agente forneceu uma resposta final\n",
         "            break\n",
         "\n",
         "\n",
-        "loop(query=\"What is the mass of Earth plus the mass of Saturn and all of that times 2?\")"
+        "loop(query=\"What is the mass of Earth plus the mass of Saturn and all of that times 2?\")  # Execução do agente."
       ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "agents",
       "language": "python",
@@ -333,9 +346,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.11.9"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
